--- a/pointing_stability.ui
+++ b/pointing_stability.ui
@@ -34,7 +34,7 @@
       <property name="geometry">
        <rect>
         <x>430</x>
-        <y>70</y>
+        <y>30</y>
         <width>221</width>
         <height>173</height>
        </rect>
@@ -93,7 +93,11 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QLineEdit" name="le_cam1_threshold"/>
+        <widget class="QLineEdit" name="le_cam1_threshold">
+         <property name="text">
+          <string>0</string>
+         </property>
+        </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
@@ -125,7 +129,7 @@
       <property name="geometry">
        <rect>
         <x>430</x>
-        <y>360</y>
+        <y>320</y>
         <width>221</width>
         <height>173</height>
        </rect>
@@ -191,7 +195,11 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QLineEdit" name="le_cam2_threshold"/>
+        <widget class="QLineEdit" name="le_cam2_threshold">
+         <property name="text">
+          <string>0</string>
+         </property>
+        </widget>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="label_8">
@@ -211,6 +219,64 @@
         <height>281</height>
        </rect>
       </property>
+     </widget>
+     <widget class="QWidget" name="layoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>510</y>
+        <width>131</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>Max Value</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="le_cam2_max">
+         <property name="text">
+          <string>0</string>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>220</y>
+        <width>131</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>Max Value</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="le_cam1_max">
+         <property name="text">
+          <string>0</string>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
