--- a/Packages/pointing_stability.ui
+++ b/Packages/pointing_stability.ui
@@ -105,16 +105,6 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
-        <widget class="QCheckBox" name="cb_cam1_decimate">
-         <property name="text">
-          <string>Decimation</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="7" column="1">
         <widget class="QPushButton" name="btn_cam1_update">
          <property name="text">
@@ -150,6 +140,20 @@
          </property>
         </widget>
        </item>
+       <item row="6" column="0">
+        <widget class="QPushButton" name="btn_cam1_gen_ROI">
+         <property name="text">
+          <string>Generate ROI</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QPushButton" name="btn_cam1_apply_ROI">
+         <property name="text">
+          <string>Crop to ROI</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="ImageView" name="gv_camera2">
@@ -168,7 +172,7 @@
         <x>740</x>
         <y>320</y>
         <width>221</width>
-        <height>197</height>
+        <height>232</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout_2">
@@ -200,6 +204,20 @@
          </property>
         </widget>
        </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_18">
+         <property name="text">
+          <string>fpa temp [C] 68=Dmg</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLabel" name="label_19">
+         <property name="text">
+          <string>fpa temp [C]</string>
+         </property>
+        </widget>
+       </item>
        <item row="3" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
@@ -228,34 +246,10 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
-        <widget class="QCheckBox" name="cb_cam2_decimate">
+       <item row="5" column="0">
+        <widget class="QLabel" name="label_15">
          <property name="text">
-          <string>Decimation</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="1">
-        <widget class="QPushButton" name="btn_cam2_update">
-         <property name="text">
-          <string>Update</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_18">
-         <property name="text">
-          <string>fpa temp [C] 68=Dmg</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLabel" name="label_19">
-         <property name="text">
-          <string>fpa temp [C]</string>
+          <string># of Frames 2 Avg</string>
          </property>
         </widget>
        </item>
@@ -266,10 +260,24 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
-        <widget class="QLabel" name="label_15">
+       <item row="7" column="1">
+        <widget class="QPushButton" name="btn_cam2_update">
          <property name="text">
-          <string># of Frames 2 Avg</string>
+          <string>Update</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QPushButton" name="btn_cam2_gen_ROI">
+         <property name="text">
+          <string>Generate ROI</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QPushButton" name="btn_cam2_apply_ROI">
+         <property name="text">
+          <string>Crop to ROI</string>
          </property>
         </widget>
        </item>
@@ -711,14 +719,12 @@
   <tabstop>le_cam1_gain</tabstop>
   <tabstop>cb_cam1</tabstop>
   <tabstop>le_cam1_threshold</tabstop>
-  <tabstop>cb_cam1_decimate</tabstop>
   <tabstop>btn_cam1_update</tabstop>
   <tabstop>le_cam1_max</tabstop>
   <tabstop>le_cam2_exp_time</tabstop>
   <tabstop>le_cam2_gain</tabstop>
   <tabstop>cb_cam2</tabstop>
   <tabstop>le_cam2_threshold</tabstop>
-  <tabstop>cb_cam2_decimate</tabstop>
   <tabstop>btn_cam2_update</tabstop>
   <tabstop>le_cam2_max</tabstop>
   <tabstop>gv_camera2</tabstop>
