--- a/Packages/pointing_stability.ui
+++ b/Packages/pointing_stability.ui
@@ -45,32 +45,39 @@
         <x>740</x>
         <y>40</y>
         <width>221</width>
-        <height>211</height>
+        <height>273</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout">
-       <item row="0" column="0">
+       <item row="0" column="1">
+        <widget class="QPushButton" name="btn_load_IR">
+         <property name="text">
+          <string>Load Recent IR</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Exposure Time (ms)</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
+       <item row="1" column="1">
         <widget class="QLineEdit" name="le_cam1_exp_time">
          <property name="text">
           <string>0.05</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>Gain (floating)</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QLineEdit" name="le_cam1_gain">
          <property name="text">
           <string>1</string>
@@ -78,79 +85,86 @@
         </widget>
        </item>
        <item row="3" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Select Camera</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QComboBox" name="cb_cam1">
-         <property name="editable">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="label_7">
-         <property name="text">
-          <string>Threshold</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QLineEdit" name="le_cam1_threshold">
-         <property name="text">
-          <string>0</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="1">
-        <widget class="QPushButton" name="btn_cam1_update">
-         <property name="text">
-          <string>Update</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
         <widget class="QLabel" name="label_16">
          <property name="text">
           <string>fpa temp [C] 68=Dmg</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="QLabel" name="label_17">
          <property name="text">
           <string>fpa temp [C]</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
-        <widget class="QLineEdit" name="Cam1_AvgFrames">
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>1</string>
+          <string>Select Camera</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QComboBox" name="cb_cam1">
+         <property name="editable">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
        <item row="5" column="0">
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Threshold</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QLineEdit" name="le_cam1_threshold">
+         <property name="text">
+          <string>0</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
         <widget class="QLabel" name="label_14">
          <property name="text">
           <string># of Frames 2 Avg</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="6" column="1">
+        <widget class="QLineEdit" name="Cam1_AvgFrames">
+         <property name="text">
+          <string>1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0">
         <widget class="QPushButton" name="btn_cam1_gen_ROI">
          <property name="text">
           <string>Generate ROI</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="7" column="1">
         <widget class="QPushButton" name="btn_cam1_apply_ROI">
          <property name="text">
           <string>Crop to ROI</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QPushButton" name="btn_cam1_update">
+         <property name="text">
+          <string>Update</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QPushButton" name="btn_load_visible">
+         <property name="text">
+          <string>Load Recent Visible</string>
          </property>
         </widget>
        </item>
@@ -581,6 +595,67 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="formLayoutWidget_6">
+      <property name="geometry">
+       <rect>
+        <x>740</x>
+        <y>120</y>
+        <width>166</width>
+        <height>109</height>
+       </rect>
+      </property>
+      <layout class="QFormLayout" name="formLayout_6">
+       <item row="0" column="0">
+        <widget class="QLabel" name="P">
+         <property name="text">
+          <string>P</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="le_P">
+         <property name="text">
+          <string>1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="Ti">
+         <property name="text">
+          <string>Ti=P/I</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="le_Ti">
+         <property name="text">
+          <string>1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="Ti_2">
+         <property name="text">
+          <string>Td=D/P</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="le_Td">
+         <property name="text">
+          <string>1</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QPushButton" name="btn_PID_update">
+         <property name="text">
+          <string>Update PID Parameters</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </widget>
    <widget class="QPushButton" name="btn_lock">
@@ -684,6 +759,8 @@
     </property>
     <addaction name="act_calibrate"/>
     <addaction name="actionLoad_Old_Home"/>
+    <addaction name="actionSave_State"/>
+    <addaction name="actionLoad_State"/>
    </widget>
    <addaction name="menuCalibrate"/>
   </widget>
@@ -696,6 +773,16 @@
   <action name="actionLoad_Old_Home">
    <property name="text">
     <string>Load Old Home</string>
+   </property>
+  </action>
+  <action name="actionSave_State">
+   <property name="text">
+    <string>Save State</string>
+   </property>
+  </action>
+  <action name="actionLoad_State">
+   <property name="text">
+    <string>Load State</string>
    </property>
   </action>
  </widget>
