--- a/Packages/pointing_stability.ui
+++ b/Packages/pointing_stability.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1072</width>
+    <width>1043</width>
     <height>780</height>
    </rect>
   </property>
@@ -657,6 +657,37 @@
       </layout>
      </widget>
     </widget>
+    <widget class="QWidget" name="UnlockReport">
+     <attribute name="title">
+      <string>Unlock Report</string>
+     </attribute>
+     <widget class="QListWidget" name="list_unlock_report">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>20</y>
+        <width>751</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_unlock_report">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>250</y>
+        <width>751</width>
+        <height>311</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>If you are seeing this, there are no attempted piezo updates outside of their allowed range yet.... Good! </string>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QPushButton" name="btn_lock">
     <property name="geometry">
@@ -736,6 +767,90 @@
        <height>719</height>
       </rect>
      </property>
+     <widget class="QCheckBox" name="cb_suppress_image_update">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>650</y>
+        <width>161</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Suppress GUI Image Update</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="cb_suppress_piezzo_update">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>670</y>
+        <width>161</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Suppress GUI Piezzo Update</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="cb_suppress_pointing_updat">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>690</y>
+        <width>161</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Suppress GUI Pointing Update</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="cb_force_unlock">
+      <property name="geometry">
+       <rect>
+        <x>589</x>
+        <y>680</y>
+        <width>91</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Force Unlock</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_20">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>650</y>
+        <width>131</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Time (s) allowed outside of Piezzo range (without getting in bounds for more than 60 s) before forced to unlock (if checked)</string>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="le_max_unlock_time">
+      <property name="geometry">
+       <rect>
+        <x>590</x>
+        <y>650</y>
+        <width>108</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>120</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <zorder>scrollArea</zorder>
@@ -749,7 +864,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1072</width>
+     <width>1043</width>
      <height>21</height>
     </rect>
    </property>
