--- a/Packages/pointing_stability.ui
+++ b/Packages/pointing_stability.ui
@@ -30,7 +30,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideNone</enum>
@@ -541,6 +541,73 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="verticalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>770</x>
+        <y>280</y>
+        <width>169</width>
+        <height>135</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="label_22">
+         <property name="text">
+          <string>Data Acquisition Controls:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_23">
+         <property name="text">
+          <string>Acquisition Time</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="le_data_acquisition_time">
+         <property name="text">
+          <string>[days, hours, mins, secs]</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="cb_acquirepointing">
+         <property name="text">
+          <string>Collect All pointing information</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="cb_acquire_voltages">
+         <property name="text">
+          <string>Collect All piezo voltage data</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Begin Acquisition</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QLabel" name="label_21">
+      <property name="geometry">
+       <rect>
+        <x>-80</x>
+        <y>830</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -599,9 +666,9 @@
       <property name="geometry">
        <rect>
         <x>740</x>
-        <y>120</y>
-        <width>166</width>
-        <height>109</height>
+        <y>140</y>
+        <width>161</width>
+        <height>121</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout_6">
@@ -622,7 +689,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="Ti">
          <property name="text">
-          <string>Ti=P/I</string>
+          <string>I</string>
          </property>
         </widget>
        </item>
@@ -636,7 +703,7 @@
        <item row="2" column="0">
         <widget class="QLabel" name="Ti_2">
          <property name="text">
-          <string>Td=D/P</string>
+          <string>D</string>
          </property>
         </widget>
        </item>
@@ -651,6 +718,73 @@
         <widget class="QPushButton" name="btn_PID_update">
          <property name="text">
           <string>Update PID Parameters</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>740</x>
+        <y>270</y>
+        <width>163</width>
+        <height>321</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="label_24">
+         <property name="text">
+          <string>Select 4 motors for fast control (Regularly updated)</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cb_control_motor_1"/>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cb_control_motor_2"/>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cb_control_motor_3"/>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cb_control_motor_4"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_25">
+         <property name="text">
+          <string>Select 2 motors to move when fast motors go out of bounds</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cb_slow_motor_1"/>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cb_slow_motor_2"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_26">
+         <property name="text">
+          <string>NOTE: You must rerun calibration if you update these motors to be different than when you last calibrated.</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pb_update_control_motors">
+         <property name="text">
+          <string>update control motors</string>
          </property>
         </widget>
        </item>
@@ -687,6 +821,11 @@
        <bool>true</bool>
       </property>
      </widget>
+    </widget>
+    <widget class="QWidget" name="tab_3">
+     <attribute name="title">
+      <string>Calibration Controls</string>
+     </attribute>
     </widget>
    </widget>
    <widget class="QPushButton" name="btn_lock">
