--- a/packages/GUI/pointing_stability.ui
+++ b/packages/GUI/pointing_stability.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1043</width>
-    <height>780</height>
+    <height>772</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideNone</enum>
@@ -477,9 +477,9 @@
       <property name="geometry">
        <rect>
         <x>760</x>
-        <y>120</y>
+        <y>100</y>
         <width>160</width>
-        <height>125</height>
+        <height>111</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout_5">
@@ -545,9 +545,9 @@
       <property name="geometry">
        <rect>
         <x>760</x>
-        <y>250</y>
+        <y>220</y>
         <width>169</width>
-        <height>158</height>
+        <height>181</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -593,12 +593,22 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="cb_acquire_temps">
+         <property name="text">
+          <string>Acquire Temps</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="cb_acquire_voltages">
          <property name="text">
           <string>Collect All piezo voltage data</string>
          </property>
          <property name="checked">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -922,7 +932,7 @@
        <rect>
         <x>740</x>
         <y>110</y>
-        <width>161</width>
+        <width>167</width>
         <height>22</height>
        </rect>
       </property>
